# opensouls-hack

./: .env.example  .gitignore  .tool-versions  README.md  app.py  emotion_evaluation_model.py  package.json  pnpm-lock.yaml
.github/workflows/: modal.yml
app/: layout.tsx
app/api/chat/: route.ts
app/api/chat/engine/: generate.mjs  index.ts  prompts.ts
app/components/: footer.tsx  header.tsx
app/components/ui/chat/: chat-avatar.tsx
cache/: doc_store.json  index_store.json  vector_store.json
modal_config/: base.py
model/: app.py  pyproject.toml
