[tool.poetry]
name = "third-wheels-model"
version = "0.0.1"
description = "Third Wheels Model"
authors = ["Rui <rui@chenrui.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.0"
python-dotenv = "^0.19.1"
twilio = "^9.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
